- Fix erroneous help output type for `Get-ADTRunAsActiveUser`.

--- a/docs/Get-ADTRunAsActiveUser.mdx
+++ b/docs/Get-ADTRunAsActiveUser.mdx
@@ -62,7 +62,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### You cannot pipe objects to this function.
 ## OUTPUTS
 
-### PSADT.Types.UserSessionInfo
+### PSADT.TerminalServices.SessionInfo
 
 ### Returns a custom object containing the user session information.
 ## NOTES
