--- a/docs/Open-ADTSession.mdx
+++ b/docs/Open-ADTSession.mdx
@@ -12,7 +12,7 @@ Opens a new ADT session.
 ## SYNTAX
 
 ```powershell
-Open-ADTSession [-SessionState] <SessionState> [[-DeploymentType] <DeploymentType>]
+Open-ADTSession [[-SessionState] <SessionState>] [[-DeploymentType] <DeploymentType>]
  [[-DeployMode] <DeployMode>] [-AllowRebootPassThru] [-TerminalServerMode] [-DisableLogging]
  [[-AppVendor] <String>] [[-AppName] <String>] [[-AppVersion] <String>] [[-AppArch] <String>]
  [[-AppLang] <String>] [[-AppRevision] <String>] [[-AppScriptVersion] <Version>] [[-AppScriptDate] <DateTime>]
@@ -48,16 +48,16 @@ Opens a new ADT session with the specified parameters.
 
 ### -SessionState
 
-Caller's SessionState.
+Defaults to $PSCmdlet.SessionState to get the caller's SessionState, so only required if you need to override this.
 
 ```yaml
 Type: SessionState
 Parameter Sets: (All)
 Aliases:
 
-Required: True
+Required: False
 Position: 1
-Default value: None
+Default value: $PSCmdlet.SessionState
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
