- Update markdown help export for `Send-ADTKeys` following changes.

--- a/docs/Send-ADTKeys.mdx
+++ b/docs/Send-ADTKeys.mdx
@@ -14,21 +14,14 @@ Send a sequence of keys to one or more application windows.
 ### WindowTitle
 
 ```powershell
-Send-ADTKeys [-WindowTitle] <String> [-Keys] <String> [[-WaitSeconds] <Int32>] [[-WaitDuration] <TimeSpan>]
- [<CommonParameters>]
-```
-
-### GetAllWindowTitles
-
-```powershell
-Send-ADTKeys [-GetAllWindowTitles] [-Keys] <String> [[-WaitSeconds] <Int32>] [[-WaitDuration] <TimeSpan>]
+Send-ADTKeys -WindowTitle <String> -Keys <String> [-WaitSeconds <Int32>] [-WaitDuration <TimeSpan>]
  [<CommonParameters>]
 ```
 
 ### WindowHandle
 
 ```powershell
-Send-ADTKeys [-WindowHandle] <IntPtr> [-Keys] <String> [[-WaitSeconds] <Int32>] [[-WaitDuration] <TimeSpan>]
+Send-ADTKeys -WindowHandle <IntPtr> -Keys <String> [-WaitSeconds <Int32>] [-WaitDuration <TimeSpan>]
  [<CommonParameters>]
 ```
 
@@ -77,24 +70,8 @@ Parameter Sets: WindowTitle
 Aliases:
 
 Required: True
-Position: 1
+Position: Named
 Default value: None
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### -GetAllWindowTitles
-
-Get titles for all open windows on the system.
-
-```yaml
-Type: SwitchParameter
-Parameter Sets: GetAllWindowTitles
-Aliases:
-
-Required: True
-Position: 2
-Default value: False
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
@@ -109,7 +86,7 @@ Parameter Sets: WindowHandle
 Aliases:
 
 Required: True
-Position: 3
+Position: Named
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
@@ -126,7 +103,7 @@ Parameter Sets: (All)
 Aliases:
 
 Required: True
-Position: 4
+Position: Named
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
@@ -143,7 +120,7 @@ Parameter Sets: (All)
 Aliases:
 
 Required: False
-Position: 5
+Position: Named
 Default value: 0
 Accept pipeline input: False
 Accept wildcard characters: False
@@ -159,7 +136,7 @@ Parameter Sets: (All)
 Aliases:
 
 Required: False
-Position: 5
+Position: Named
 Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
@@ -180,7 +157,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 
 ### This function does not return any objects.
 ## NOTES
-An active ADT session is NOT required to use this function.
+An active ADT session is required to use this function.
 
 Tags: psadt<br />
 Website: https://psappdeploytoolkit.com<br />
