- Add aliases for renamed `Show-ADTInstallationProgress` parameters.

--- a/docs/Show-ADTInstallationProgress.mdx
+++ b/docs/Show-ADTInstallationProgress.mdx
@@ -186,7 +186,7 @@ The default is the derived value from "$($adtSession.DeploymentType)".
 ```yaml
 Type: String
 Parameter Sets: (All)
-Aliases:
+Aliases: WindowSubtitle
 
 Required: True
 Position: Named
@@ -203,7 +203,7 @@ The default is the derived value from "$($adtSession.InstallTitle)".
 ```yaml
 Type: String
 Parameter Sets: (All)
-Aliases:
+Aliases: WindowTitle
 
 Required: True
 Position: Named
