- Re-compile dev DLL files and update markdown help exports.

--- a/docs/Get-ADTCommandTable.mdx
+++ b/docs/Get-ADTCommandTable.mdx
@@ -44,7 +44,7 @@ Returns PSAppDeployToolkit's safe command lookup table.
 
 ### Returns PSAppDeployTookit's safe command lookup table as a ReadOnlyDictionary.
 ## NOTES
-An active ADT session is required to use this function.
+An active ADT session is NOT required to use this function.
 
 Tags: psadt<br />
 Website: https://psappdeploytoolkit.com<br />
