--- a/docs/Get-ADTWindowTitle.mdx
+++ b/docs/Get-ADTWindowTitle.mdx
@@ -118,9 +118,9 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 ### You cannot pipe objects to this function.
 ## OUTPUTS
 
-### PSADT.Types.WindowInfo
+### PSADT.WindowManagement.WindowInfo
 
-### Returns a PSADT.Types.WindowInfo object with the following properties:
+### Returns a PSADT.WindowManagement.WindowInfo object with the following properties:
 ### - WindowTitle
 ### - WindowHandle
 ### - ParentProcess
