--- a/docs/Send-ADTKeys.mdx
+++ b/docs/Send-ADTKeys.mdx
@@ -157,7 +157,7 @@ This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable
 
 ### This function does not return any objects.
 ## NOTES
-An active ADT session is required to use this function.
+An active ADT session is NOT required to use this function.
 
 Tags: psadt<br />
 Website: https://psappdeploytoolkit.com<br />
