- Update erroneous comment-based help for Enable/Disable-ADTTerminalServerInstallMode`.

--- a/docs/Disable-ADTTerminalServerInstallMode.mdx
+++ b/docs/Disable-ADTTerminalServerInstallMode.mdx
@@ -7,7 +7,7 @@ hide_table_of_contents: false
 
 ## SYNOPSIS
 
-Changes to user install mode for Remote Desktop Session Host/Citrix servers.
+Changes the current Remote Desktop Session Host/Citrix server to user execute mode.
 
 ## SYNTAX
 
@@ -17,7 +17,7 @@ Disable-ADTTerminalServerInstallMode [<CommonParameters>]
 
 ## DESCRIPTION
 
-The Disable-ADTTerminalServerInstallMode function changes the server mode to user install mode for Remote Desktop Session Host/Citrix servers.
+The Disable-ADTTerminalServerInstallMode function changes the current Remote Desktop Session Host/Citrix server to user execute mode.
 This is useful for ensuring that applications are installed in a way that is compatible with multi-user environments.
 
 ## EXAMPLES
@@ -28,7 +28,7 @@ This is useful for ensuring that applications are installed in a way that is com
 Disable-ADTTerminalServerInstallMode
 ```
 
-This example changes the server mode to user install mode for Remote Desktop Session Host/Citrix servers.
+This example changes the current Remote Desktop Session Host/Citrix server to user execute mode.
 
 ## PARAMETERS
 
