--- a/docs/Enable-ADTTerminalServerInstallMode.mdx
+++ b/docs/Enable-ADTTerminalServerInstallMode.mdx
@@ -7,7 +7,7 @@ hide_table_of_contents: false
 
 ## SYNOPSIS
 
-Changes to user install mode for Remote Desktop Session Host/Citrix servers.
+Changes the current Remote Desktop Session Host/Citrix server to user install mode.
 
 ## SYNTAX
 
@@ -17,7 +17,7 @@ Enable-ADTTerminalServerInstallMode [<CommonParameters>]
 
 ## DESCRIPTION
 
-The Enable-ADTTerminalServerInstallMode function changes the server mode to user install mode for Remote Desktop Session Host/Citrix servers.
+The Enable-ADTTerminalServerInstallMode function changes the current Remote Desktop Session Host/Citrix server to user install mode.
 This is useful for ensuring that applications are installed in a way that is compatible with multi-user environments.
 
 ## EXAMPLES
@@ -28,7 +28,7 @@ This is useful for ensuring that applications are installed in a way that is com
 Enable-ADTTerminalServerInstallMode
 ```
 
-This example changes the server mode to user install mode for Remote Desktop Session Host/Citrix servers.
+This example changes the current Remote Desktop Session Host/Citrix server to user install mode.
 
 ## PARAMETERS
 
