- Update markdown help exports for other recently-changed functions.

--- a/docs/Copy-ADTFile.mdx
+++ b/docs/Copy-ADTFile.mdx
@@ -168,7 +168,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: /NJH /NJS /NS /NC /NP /NDL /FP /IS /IT /IM /XX /MT:4 /R:1 /W:1
+Default value: /NJH /NJS /NS /NC /NP /NDL /FP /IA:RASHCNETO /IS /IT /IM /XX /MT:4 /R:1 /W:1
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
