--- a/docs/Start-ADTProcessAsUser.mdx
+++ b/docs/Start-ADTProcessAsUser.mdx
@@ -169,7 +169,7 @@ Aliases:
 
 Required: False
 Position: Named
-Default value: (Get-ADTRunAsActiveUser | Select-Object -ExpandProperty NTAccount)
+Default value: (Get-ADTClientServerUser | Select-Object -ExpandProperty NTAccount)
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
