--- a/docs/Get-ADTRunAsActiveUser.mdx
+++ b/docs/Get-ADTRunAsActiveUser.mdx
@@ -12,7 +12,7 @@ Retrieves the active user session information.
 ## SYNTAX
 
 ```powershell
-Get-ADTRunAsActiveUser [[-UserSessionInfo] <SessionInfo[]>] [<CommonParameters>]
+Get-ADTRunAsActiveUser
 ```
 
 ## DESCRIPTION
@@ -33,27 +33,6 @@ Get-ADTRunAsActiveUser
 This example retrieves the active user session information.
 
 ## PARAMETERS
-
-### -UserSessionInfo
-
-An array of UserSessionInfo objects to enumerate through.
-If not supplied, a fresh query will be performed.
-
-```yaml
-Type: SessionInfo[]
-Parameter Sets: (All)
-Aliases:
-
-Required: False
-Position: 1
-Default value: (Get-ADTLoggedOnUser -InformationAction SilentlyContinue)
-Accept pipeline input: False
-Accept wildcard characters: False
-```
-
-### CommonParameters
-
-This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).
 
 ## INPUTS
 
