--- a/docs/Show-ADTBalloonTip.mdx
+++ b/docs/Show-ADTBalloonTip.mdx
@@ -13,7 +13,7 @@ Displays a balloon tip notification in the system tray.
 
 ```powershell
 Show-ADTBalloonTip [-BalloonTipText] <String> [-BalloonTipIcon <ToolTipIcon>] [-BalloonTipTime <UInt32>]
- -BalloonTipTitle <String> [<CommonParameters>]
+ [-NoWait] -BalloonTipTitle <String> [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -79,7 +79,8 @@ Accept wildcard characters: False
 
 ### -BalloonTipTime
 
-This parameter is obsolete and will be removed in PSAppDeployToolkit 4.2.0.
+Time in milliseconds to display the balloon tip.
+Default: 10000.
 
 ```yaml
 Type: UInt32
@@ -89,6 +90,22 @@ Aliases:
 Required: False
 Position: Named
 Default value: 10000
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -NoWait
+
+Creates the balloon tip asynchronously.
+
+```yaml
+Type: SwitchParameter
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: Named
+Default value: False
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
